Fixed problem where the 'private' flag can't have a value of 'yes', but instead must have a single space char

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,7 @@ default: convspec.html
 .PHONY: clean
 clean:
 	-rm convspec.html
+	-rm convspec.xml
 
 convspec.html: convspec.xml 
 # If there's a syntax error, xml2rfc will, by default, bring up a
